--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1024">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>AdrianPage</title>
   <link rel="stylesheet" href="main.css" type="text/css" media="all" />
 </head>
 <body>
